added endpoint to get sum of expense/income in a time range
